--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,6 +5,7 @@
   	<%= stylesheet_link_tag :all %>
   	<%= javascript_include_tag :defaults %>
   	<%= csrf_meta_tag %>
+	<%= include_wice_grid_assets %>
 </head>
 <body>
 
