--- a/public/stylesheets/admin.css
+++ b/public/stylesheets/admin.css
@@ -6,23 +6,23 @@
 
 #upperblock	{ position: absolute; top: 0px; left:0px; 
 			padding: 5px;
-			height: 40px;
+			height: 30px;
 			width :1090px;
-			background-color: yellow;
+			background-color: lightpink;
 			margin: 10px;}
 #leftblock	{ position: absolute; top: 55px; left:0px; 
 			height: 530px;
 			width :420px;
-			background-color: red;
+			background-color: lightgrey;
 			margin: 10px;
 			line-height: 100%; }
 #rightblock	{ position: absolute; top: 55px; left:430px; 
 			height: 530px;
 			width :670px;
-			background-color: blue;
+			background-color: grey;
 			margin: 10px;}
 #docviewer {
-  	margin-bottom: 10px;
+  	margin: 10px;
 	padding: 5px;
 }
 #content,#upperblock h2	{ text-align: left; font-size: 100%; }
@@ -89,7 +89,28 @@ a.action:hover { backgrounf: #B6D492; }
 div.field, div.actions {
   	margin-bottom: 2px;
 	padding: 5px;
+	width: 100px;
 	float: right;
 }
 
+
+.simple_form label {
+	float: left;
+	width: 100px;
+	text-align: right;
+	margin: 2px 10px;
+}
+
+.simple_form div.input {
+	margin: 10px;
+}
+
+.simple_form div.boolean, .simple_form div.input[type='submit'] {
+	margin-left: 120px;
+}
+
+.simple_form div.boolean label {
+	float: none;
+	margin: 0;
+}
 
