--- a/public/stylesheets/public.css
+++ b/public/stylesheets/public.css
@@ -28,7 +28,7 @@ a:hover	{ }
 /* Structure */
 #header	{ height: 4em; padding-top: 1em; text-align: center; background: #993120; color: #FFFFFF; }
 #header h1 { margin: 0; padding: 0; }
-#main	{ min-height: 600px; background: #F2DC87; }
+#main	{ min-height: 600px; background: lightblue; }
 #navigation
 		{ float: left; width: 180px; min-height: 480px; padding: 10px; background: #94B26F; color: #4C2516; }
 #content{ float: left; width: 920px; padding: 10px; }
