--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,8 +4,13 @@
 	<title>Simple CMS | <%= @page_title || "Admin Area" %></title>
   	<%= stylesheet_link_tag :all %>
   	<%= javascript_include_tag :defaults %>
-  	<%= csrf_meta_tag %>
+  	
 	<%= include_wice_grid_assets %>
+	<%= stylesheet_link_tag 'jquery-ui.css' %>
+	<%= javascript_include_tag 'jquery.ui.datepicker-en.js' %>
+	
+	<%= csrf_meta_tag %>
+	
 </head>
 <body>
 
