--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -6,8 +6,17 @@
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 	<title>Simple CMS | <%= @page_title || "Admin Area" %></title>
 	<meta name="author" content="Michael Sopira">
-	<%= stylesheet_link_tag("public", "admin", :media=>"all") %>
-	<%= javascript_include_tag("application") %>
+	<%= stylesheet_link_tag('public', 'admin', 'jquery-ui.css', :media=>"all") %>
+	
+  	<%= javascript_include_tag :defaults %>
+	<%= javascript_include_tag 'jquery.ui.datepicker-en.js' %>
+
+  	
+	<%= include_wice_grid_assets %>
+	
+	<%= csrf_meta_tag %>
+  	
+	
 </head>
 <body>
 	<div id="header">
