Fighting with routes problems Wice_grid

--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -6,7 +6,7 @@
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 	<title>Simple CMS | <%= @page_title || "Admin Area" %></title>
 	<meta name="author" content="Michael Sopira">
-	<%= stylesheet_link_tag('public', 'admin', 'jquery-ui.css', :media=>"all") %>
+	<%= stylesheet_link_tag('public', 'admin', :media=>"all") %>
 	
   	<%= javascript_include_tag :defaults %>
 	<%= javascript_include_tag 'jquery.ui.datepicker-en.js' %>
