--- a/app/views/documents/_index_table.html.erb
+++ b/app/views/documents/_index_table.html.erb
@@ -11,7 +11,7 @@
   <% end -%>
 
 
- <%= grid(@documents_grid, :allow_showing_all_records => false, :show_filters => :when_filtered) do |g|
+ <%= grid(@documents_grid, :allow_showing_all_records => false, :show_filters => :always) do |g|
 	g.action_column
     g.column 	:column_name => 'ID', :attribute_name => 'id', :auto_reload => true
 
@@ -38,7 +38,7 @@
 	end
   end -%>
 
-	<%= grid(@documents_grid_search, :allow_showing_all_records => false, :show_filters => :when_filtered) do |g|
+	<%= grid(@documents_grid_search, :allow_showing_all_records => false, :show_filters => :always) do |g|
 		g.action_column
 	    g.column 	:column_name => 'ID', :attribute_name => 'id', :auto_reload => true
 
