--- a/public/stylesheets/admin.css
+++ b/public/stylesheets/admin.css
@@ -37,7 +37,7 @@ a:hover		{ text-decoration: underline; }
 /* Large action buttons */
 a.action	{ float: right; padding: 2px 5px; margin: 0 0 1em 1em; 
 			background: pink; color: #4C2516; border: 0px solid #4C2516; }
-a.action:hover { backgrounf: #B6D492; }	
+a.action:hover { background: #B6D492; }	
 
 /* Small action buttons */
 .actions	{ width: 200px; }
@@ -65,7 +65,7 @@ a.action:hover { backgrounf: #B6D492; }
   	background-image: url(/images/down_arrow.gif);
 	background-color: lightgrey;
 }*/	
-.show table	{ clear: both; margin: 0 200px; width: 300px; }*/
+.show table	{ clear: both; margin: 0 200px; width: 300px; }
 .show table.wide { width: 600px; margin: 0 50px; }
 .show table tr th { white-space: nowrap; padding-right: 5px; }
 .show table tr td { border: 1px solid #666666; }
