--- a/public/stylesheets/public.css
+++ b/public/stylesheets/public.css
@@ -9,34 +9,51 @@ dark brown:		#332318
 light brown:	#4C2516
 */
 
-html 	{ height: 100%; width: 100%; }
-body 	{ width: 100%; min-width:980px; height: 100%; margin: 0; padding: 0; 
-		font: 14px Verdana, Lucida, Arial, Helvetica,sans-serif; }
+html 		{ height: 100%; width: 100%; }
+body 		{ width: 100%; width: 1200px; height: 100%; margin: 0; padding: 0; 
+			font: 14px Verdana, Lucida, Arial, Helvetica,sans-serif; }
 p, td, ul, ol, li, dl, dt, dd
-		{ font-family: Verdana, Lucida, Arial, Helvetica,sans-serif; }
-img		{ border: none; }
-table	{ border-collapse: collapse; }
-table 	{ \-moz-border-radius: 0.5em; }
+			{ font-family: Verdana, Lucida, Arial, Helvetica,sans-serif; }
+img			{ border: none; }
+table		{ border-collapse: collapse; }
+table 		{ \-moz-border-radius: 0.5em; }
 table tr th, table tr td
-		{ vertical-align: top; text-align: left; padding: 3px; }
+			{ vertical-align: top; text-align: left; padding: 3px; }
 a, a:visited
-		{ color: #993120; }
-a:hover	{ }
-.clear { clear: both; }
-.center	{ text-align: center; }
+			{ color: #993120; }
+a:hover		{ }
+.clear 		{ clear: both; }
+.center		{ text-align: center; }
 
 /* Structure */
-#header	{ height: 4em; padding-top: 1em; text-align: center; background: lightpink; color: #FFFFFF; }
-#header h1 { margin: 0; padding: 0; }
-#main	{ min-height: 600px; background: lightblue; }
+#header		{ height: 4em; padding-top: 1em; text-align: center; background: lightpink; color: #FFFFFF; }
+#header h1 	{ margin: 0; padding: 0; }
+#main		{ height: 700px; 
+			background: lightblue; }
 #navigation
-		{ float: left; width: 180px; min-height: 480px; padding: 10px; background: #94B26F; color: #4C2516; }
-#content{ float: left; width: 920px; padding: 10px; }
-#footer	{ clear: both; height: 2.5em; text-align: right; background: #4C2516; color: #F2DC87; }
-#footer	p
-		{ margin: 0; padding: 0.5em 1em; }
-.logo	{ margin: 0; padding: 0.5em 0.5em; float: left; }
-.section { max-width: 740px; padding-top: 0.5em; margin-top: 0.5em; border-top: 1px dotted #666666; }
+			{ float: left; 
+			width: 180px; 
+			height: 480px; 
+			padding: 10px; 
+			background: #94B26F; 
+			color: #4C2516; }
+#content	{ float: left; 
+			width: 1150px; 
+			padding: 10px; }
+#footer		{ clear: both; 
+			height: 2.5em; 
+			text-align: right; 
+			background: #4C2516; 
+			color: #F2DC87; }
+#footer	p	{ margin: 0; 
+			padding: 0.5em 1em; }
+.logo		{ margin: 0; 
+			padding: 0.5em 0.5em; 
+			float: left; }
+.section 	{ max-width: 740px; 
+			padding-top: 0.5em; 
+			margin-top: 0.5em; 
+			border-top: 1px dotted #666666; }
 
 		
 /* Navigation */
